--- a/src/global.css
+++ b/src/global.css
@@ -16,3 +16,7 @@
 .mantine-Input-input:focus {
   @apply border-purple-500;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
