--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,9 @@
   @apply border-purple-500;
 }
 
+.mantine-PasswordInput:focus {
+  @apply border-purple-500;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
-
